# flair

./: .TODO  .bumpversion.cfg  .bumpversion.toml  .dir-locals.el  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  collapse_isoforms_precise.py  correctSplice.py  defs.mk  environment.yaml  flair.py  flake8.mk  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: issues-with-running-flair.md  questions-about-flair.md
.github/workflows/: lint.yml
dev/docs/: pip.md  release-setup.md  release.md
dev_docs/: .release.howto.swp  README.md  bioconda  bioconda.md  pip  release-testing.md  release.howto  release.md
dev_test/: makefile
dev_test/test_expected/: collapse.isoforms.bed  collapse_3prime_regions.isoforms.bed  collapse_annotation_reliant_generate.isoforms.bed  collapse_bothends.isoforms.bed  collapse_end_window.isoforms.bed  collapse_filter_comprehensive.isoforms.bed  collapse_filter_ginormous.isoforms.bed  collapse_filter_nosubset.isoforms.bed  collapse_isoformtss.isoforms.bed  collapse_no_gtf_end_adjustment.isoforms.bed  collapse_no_redundant_bestonly.isoforms.bed  collapse_no_redundant_longest.isoforms.bed  collapse_promoters.isoforms.bed  collapse_quality.isoforms.bed  collapse_stringent.isoforms.bed  collapse_support.isoforms.bed  collapse_support_fract.isoforms.bed  collapse_trust_ends.isoforms.bed  correct_all_inconsistent.bed
dev_test/test_input/: annotation.gtf  gc.ends  gc.starts  sr_junctions.bed
docs/: Makefile
docs/source/: cite.rst  conf.py  contents.tmp  example_files.rst  faqs.rst  flair-protocol.rst  flair-protocols.rst  flair2_functions.rst  flair_align.rst  flair_collapse.rst  flair_correct.rst  flair_diffExp.rst  flair_diffSplice.rst  flair_quantify.rst  index.rst  installing.rst  modules.rst  other_environments.rst  other_ways.rst  requirements.rst  scripts.rst  testrun.rst
misc/: Dockerfile  flair_basic_conda_env.yaml  flair_conda_env.yaml  flair_dev_conda_env.yaml  flair_diffexp_conda_env.yaml  runflaironsimisofusionvars.py
src/flair/: ._bed_to_sequence.py  ._bed_to_sequence_models.py  ._flair.py  ._flair_align.py  ._flair_collapse.py  ._flair_correct.py  ._flair_quantify.py  ._ssPrep.py  __init__.py  annotate_aaseq_with_uniprot.py  annotate_group_vcf_vars.py  annotation_data.py  assign_variants_to_transcripts.py  bam2Bed12.py  bed.py  bed_to_gtf.py  bed_to_psl.py  bed_to_sequence.py  bed_to_sequence_models.py  call_diffsplice_events.py  collapse_bed_files.py  collapse_isoforms_precise.py  combine_counts.py  compare_transcriptomes.py  consolidate_isoforms.py  convert_synthetic_to_genome_bed.py  count_sam_transcripts.py  count_sam_transcripts_new.py  counts_to_tpm.py  deFLAIR.py  detectBestORF.py  dgd_Hsa_all_v71.tsv  diffExp_deseq2.R  diffExp_drimseq.R  diffSplice_drimSeq.R  diff_iso_usage.py  diffsplice_fishers_exact.py  es_as.py  es_as_inc_excl_to_counts.py  fasta_seq_lengths.py  (+77 more)
test/: Makefile  README.md  compare_sjc.py  makefile  test-case-data.md  test_correct_lib.py  test_flair_bed.py  test_gtf_io.py  test_partition_runner.py
test/expected/: diffsplice.alt3.events.quant.tsv  test-align-help.out  test-align-intpriming.bed  test-align-seg1.bed  test-align-separate.bed  test-align.bed  test-bam2bed12.bed  test-bed-to-gtf-cds.gtf  test-bed-to-gtf-extracols-cds.gtf  test-bed-to-gtf-extracols.gtf  test-bed-to-gtf.gtf  test-collapse-annot.annotated_transcripts.alignment.counts  test-collapse-annot.annotated_transcripts.bed  test-collapse-annot.annotated_transcripts.fa  test-collapse-annot.annotated_transcripts.isoform.read.map.txt  test-collapse-annot.annotated_transcripts.supported.bed  test-collapse-annot.combined.isoform.read.map.txt  test-collapse-annot.isoform.read.map.txt  test-collapse-annot.isoforms.bed  test-collapse-annot.isoforms.fa  test-collapse-annot.isoforms.fa.fai  test-collapse-annot.isoforms.gtf  test-collapse-annot.promoter_supported.bed  test-collapse-annot.unassigned.bed  test-collapse-annot.unassigned.fasta  test-collapse-faster-annot-prealigned.isoforms.gtf  test-collapse-faster-annot-removeintprim.annotated_transcripts.fa.fai  test-collapse-faster-annot-removeintprim.annotated_transcripts.supported.bed  test-collapse-faster-annot-removeintprim.bed  test-collapse-faster-annot-removeintprim.isoforms.bed  test-collapse-faster-annot-removeintprim.novel.isoform.read.map.txt  test-collapse-faster-annot-removeintprim.unassigned.fasta  test-collapse-faster-annot-removeintprim_all_corrected.bed  test-collapse-faster-annot-removeintprimtss_supported.bed  test-collapse-faster-annot.annotated_transcripts.alignment.counts  test-collapse-faster-annot.annotated_transcripts.bed  test-collapse-faster-annot.bed  test-collapse-faster-annot.isoform.read.map.txt  test-collapse-faster-annot.isoforms.fa  test-collapse-faster-annot.novel.isoform.read.map.txt  (+118 more)
test/input/: DDX5_POLG2_gencode38.gtf  DDX5_readthrough.badread40x.fastq  DDX5_readthrough_IPSJ.bed  ERGIC3_KRAS_sim_fusion.badread20x.stranded.fastq  annotation.gtf  annotation.incomplete.gtf  basic.annotation.incomplete.scrambled.gtf  basic.counts_matrix_diffexp.tsv  basic.counts_matrix_diffsplice.tsv  basic.promoter_regions.bed  basic.reads.1.fa  basic.reads.2.fa  basic.reads.3.fa  basic.reads.4.fa  basic.reads.5.fa  basic.reads.6.fa  basic.reads.fa  basic.reads_manifest.txt  bed-fa-map.combine_manifest.txt  bed-fa.combine_manifest.txt  bed-only.combine_manifest.txt  diffexp-multi-cond.tsv  parY.annotation.gtf  reads.6.fa  reads.fa  reads_manifest.txt  seg1.cdna-ont.fastq  seg1.gencodeV47.gtf  seg1.promoter-regions.bed  seg1.reads_manifest.txt  spliceevents.manifest.tsv  tardigrade-regress-aligns.bed  tardigrade-regress-aligns.sam  tardigrade-regress-introns.bed  test-collapse-annot.isoforms.bed  test-collapse-annot.isoforms.fa  test-collapse-annot.isoforms.fa.fai  test-variants.B1.B.flair.aligned.bam  test-variants.B1.B.flair.aligned.bam.bai  test.collapse.isoforms.fa  (+1 more)
test/test_expected/: test-align-intpriming.bed  test-collapse-faster-annot.isoforms.gtf  test-collapse-support.isoforms.gtf  (+17 more)
(+48 files in other folders)
