[project]
name = "flair"
version = "2.1.0a"
description = "FLAIR is a long-read transcriptomics model building and analysis package"
authors = [
    {name = "Angela Brooks", email = "anbrooks@ucsc.edu"},
    {name = "Alison Tang"},
    {name = "Jeltje van Baren", email = "jeltje.van.baren@gmail.com"},
    {name = "Colette Felton", email = "cafelton@ucsc.edu"},
    {name = "Cameron M. Soulette"},
    {name = "Mark Diekhans", email = "markd@ucsc.edu"}
]
license = {text = "BSD 3-clause"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pysam (>=0.22.1,<0.23.0)",
    "pipettor (>=1.0.0,<2.0.0)",
    "pybedtools (>=0.11.0,<0.12.0)",
    "ncls (>=0.0.68,<0.0.69)",
    "setuptools (>=75.8.0,<76.0.0)",
    "mappy (>=2.28,<3.0)",
    "numpy (>=2.2,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
homepage = "https://flair.readthedocs.io/en/latest/"
documentation = "https://flair.readthedocs.io/en/latest/"
repository = "https://github.com/BrooksLabUCSC/flair/"
packages = [
    {include = "flair", from = "src"}
]

[tool.poetry.scripts]
assign_variants_to_transcripts = "bin.assign_variants_to_transcripts"
# junctions_from_sam = "bin.junctions_from_sam"
# mark_intron_retention = "bin.mark_intron_retention"
# mark_productivity = "bin.mark_productivity"
# normalize_counts_matrix = "bin.normalize_counts_matrix"
# bam2Bed12 = "bin.bam2Bed12"
# diff_iso_usage = "bin.diff_iso_usage"
# diffsplice_fishers_exact = "bin.diffsplice_fishers_exact"
# plot_isoform_usage = "bin.plot_isoform_usage"
# predictProductivity = "bin.predictProductivity"
# psl_to_bed = "bin.psl_to_bed"
# sam_to_map = "bin.sam_to_map"
# fasta_seq_lengths = "bin.fasta_seq_lengths"
# gtf_to_bed = "bin.gtf_to_bed"
# bed_to_sequence = "bin.bed_to_sequence"
# identify_annotated_gene = "bin.identify_annotated_gene"
# identify_gene_isoform = "bin.identify_gene_isoform"
flair = "flair.flair:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
sphinx = ">=8.2.3,<9.0.0"
sphinx-rtd-theme = ">=3.0.2"

[tool.poetry.group.diffexp.dependencies]
scipy = ">=1.15.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
rpy2 = ">=3.5.17,<4.0.0"
