[project]
name = "flair-brookslab"
version = "3.0.0"
description = "FLAIR is a long-read transcriptomics model building and analysis package"
authors = [
    {name = "Angela Brooks", email = "anbrooks@ucsc.edu"},
    {name = "Alison Tang"},
    {name = "Jeltje van Baren", email = "jeltje.van.baren@gmail.com"},
    {name = "Colette Felton", email = "cafelton@ucsc.edu"},
    {name = "Cameron M. Soulette"},
    {name = "Mark Diekhans", email = "markd@ucsc.edu"}
]
license = {text = "BSD 3-clause"}
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "pysam (>=0.23.0,<0.24.0)",
    "pipettor (>=1.1.0,<2.0.0)",
    "ncls (>=0.0.70,<0.1.0)",
    "setuptools (>=80.2.0,<81.0.0)",
    "mappy (>=2.28,<3.0)",
    "numpy (>=2.2,<3.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "flake8 (>=7.1.1)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2)",
    "bump-my-version (>=1.1.1)",
]

[project.urls]
homepage = "https://flair.readthedocs.io/en/latest/"
documentation = "https://flair.readthedocs.io/en/latest/"
repository = "https://github.com/BrooksLabUCSC/flair/"

[project.scripts]
flair = "flair.flair_cli:main"
junctions_from_sam = "flair.junctions_from_sam:main"
mark_intron_retention = "flair.mark_intron_retention:main"
mark_productivity = "flair.mark_productivity:main"
normalize_counts_matrix = "flair.normalize_counts_matrix:main"
plot_isoform_usage = "flair.plot_isoform_usage:main"
predictProductivity = "flair.predictProductivity:main"
fasta_seq_lengths = "flair.fasta_seq_lengths:main"
gtf_to_bed = "flair.gtf_to_bed:main"
bed_to_gtf = "flair.bed_to_gtf:main"
bed_to_sequence = "flair.bed_to_sequence:main"
identify_annotated_gene = "flair.identify_annotated_gene:main"
identify_gene_isoform = "flair.identify_gene_isoform:main"
diff_iso_usage = "flair.diff_iso_usage:main"
diffsplice_fishers_exact = "flair.diffsplice_fishers_exact:main"
flair_partition = "flair.flair_partition:main"

# these are needed for pip install
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

## 
# poetry specific
##

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "flair", from = "src"},
]
        
