[metadata]
name = testflair
version = 1.5.2
author = Jeltje van Baren
author_email = jeltje.van.baren@gmail.com
description = testpackage
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/BrooksLabUCSC/flair
project_urls =
    Bug Tracker = https://github.com/BrooksLabUCSC/flair/issues
    repository = https://github.com/BrooksLabUCSC/flair
classifiers =
    Programming Language :: Python :: 3
    License :: Free To Use But Restricted
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    wheel
    tqdm
    ncls
    pybedtools
    mappy==2.24
    pysam

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flair = flair.flair:main
