[metadata]
name = flair-brookslab
version = 1.7.0
author = Jeltje van Baren
author_email = jeltje.van.baren@gmail.com
description = flair
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/BrooksLabUCSC/flair
project_urls =
    Bug Tracker = https://github.com/BrooksLabUCSC/flair/issues
    repository = https://github.com/BrooksLabUCSC/flair
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    tqdm
    ncls
    pybedtools
    mappy==2.24
    pysam
    scipy
scripts = 
    bin/assign_variants_to_transcripts
    bin/junctions_from_sam
    bin/mark_intron_retention
    bin/mark_productivity
    bin/normalize_counts_matrix
    bin/bam2Bed12
    bin/bed_to_psl
    bin/diff_iso_usage
    bin/diffsplice_fishers_exact
    bin/plot_isoform_usage
    bin/predictProductivity
    bin/psl_to_bed
    bin/sam_to_map
    bin/fasta_seq_lengths
    bin/gtf_to_bed
    bin/bed_to_sequence

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flair = flair.flair:main

