[metadata]
name = flair-brookslab
version = 2.0.0
author = Jeltje van Baren
author_email = jeltje.van.baren@gmail.com
description = flair
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/BrooksLabUCSC/flair
project_urls =
    Bug Tracker = https://github.com/BrooksLabUCSC/flair/issues
    repository = https://github.com/BrooksLabUCSC/flair
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    numpy
    ncls
    pybedtools
    mappy==2.24
    pysam
    scipy
    pipettor
    pandas
scripts = 
    bin/assign_variants_to_transcripts
    bin/junctions_from_sam
    bin/mark_intron_retention
    bin/mark_productivity
    bin/normalize_counts_matrix
    bin/bam2Bed12
    bin/diff_iso_usage
    bin/diffsplice_fishers_exact
    bin/plot_isoform_usage
    bin/predictProductivity
    bin/sam_to_map
    bin/fasta_seq_lengths
    bin/gtf_to_bed
    bin/bed_to_sequence
    bin/identify_annotated_gene
    bin/identify_gene_isoform

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flair = flair.flair:main

